methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:34: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:48: error: Unmatched closing brace '}' ignored here
}
^